--- a/README
+++ b/README
@@ -6,9 +6,12 @@
 # install
 npm install
 # deploy 
-npx hardhat run --network sepolia scripts/deploy.js
+npx hardhat run --network sepolia scripts/deployDao.js
 # please update the contract address after edit contract and re-deploy
 # test
 npx hardhat test --network hardhat # on local hardhat net, no need to deploy
 npx hardhat test # on remote sepolia test net
+
+## Attack
+npx hardhat run scripts/attack.js --network attack
 ```
